<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".Fragments.SignInFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="@font/leckerlione"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorGrey"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_marginBottom="6dp"
        app:startIconDrawable="@drawable/padlock"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPasswordConfirmSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:startIconDrawable="@drawable/padlock"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordConfirm"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@drawable/btn_primary"
            android:elevation="10dp"
            android:textSize="17dp"
            android:textAllCaps="false"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveaccount"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorGrey"
            android:layout_marginRight="6dp"
            />
        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins"
            android:layout_marginRight="6dp"
            />

    </LinearLayout>
</LinearLayout>