<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_marginTop="30sp"
    tools:context=".Fragments.SignInFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="@font/leckerlione"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/colorPrimary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorGrey"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPasswordSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp"
        app:startIconDrawable="@drawable/padlock"
        app:startIconTint="@color/colorPrimary"
        app:passwordToggleTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorGrey"
            android:textSize="15dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_primary"
            android:elevation="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textSize="17dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donthaveaccount"
            android:fontFamily="@font/poppins"
            android:layout_marginRight="6dp"
            />
        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins"
            android:layout_marginRight="6dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </RelativeLayout>



</LinearLayout>