<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPostActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title=""
        android:elevation="1dp"
        >

        <ImageButton
            android:id="@+id/btnBackEditPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_marginRight="12dp"
            android:onClick="cancelEditPost"
            android:background="@android:color/transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editPost"
            android:textColor="@color/colorGrey"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="6dp"
            >

            <EditText
                android:id="@+id/txtDescEditPost"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:inputType="textMultiLine"
                android:gravity="left"
                android:textSize="15sp"
                android:padding="8dp"
                android:hint="@string/desc_hint"
                android:background="@drawable/txt_background"
                android:fontFamily="@font/poppins"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <ProgressBar
                    android:id="@+id/progressBarAddPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    />

                <Button
                    android:id="@+id/btnEditPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_primary"
                    android:elevation="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/updatePost"
                    android:textAllCaps="false"
                    android:textSize="17dp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>